<resources>
    <string name="app_name">JHWParcialMovil</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">Bienvenido, %1$s</string>
    <string name="invalid_username">Debes escribir un username</string>
    <string name="invalid_password">Debes escribir un password</string>
    <string name="login_failed">No se pudo iniciar sesion</string>
    <string name="required_fields">Debes escribir username y password</string>
    <string name="unit_1_tab">Longitud</string>
    <string name="unit_2_tab">Masa</string>
    <string name="unit_3_tab">Moneda</string>
    <string name="unit_1_title">Conversor de Longitud</string>
    <string name="unit_2_title">Conversor de Masa</string>
    <string name="unit_3_title">Conversor de Moneda</string>
    <string name="input_value_hint">Ingresa un valor</string>
    <string name="label_from">Desde</string>
    <string name="label_to">Hacia</string>
    <string name="action_convert">Convertir</string>
    <string name="result_placeholder">Resultado: -</string>
    <string name="result_format">Resultado: %1$s %2$s</string>
    <string name="error_invalid_value">Ingresa un numero valido</string>
    <string name="currency_rate_note">Tasas de referencia fijas: 1 USD=4000 COP, 1 EUR=4350 COP, 1 MXN=235 COP.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>